--- a/arch/arm/boot/dts/tegra30-asus-transformer-common.dtsi
+++ b/arch/arm/boot/dts/tegra30-asus-transformer-common.dtsi
@@ -1655,6 +1655,10 @@
 		};
 	};
 
+	power-domain-core {
+		power-supply = <&vdd_core>;
+	};
+
 	sound {
 		nvidia,i2s-controller = <&tegra_i2s1>;
 
